# tshts

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  my_sheet.tshts  plan.md
.github/workflows/: rust.yml
benches/: calc_engine.rs
src/: lib.rs  main.rs
src/application/: mod.rs  state.rs
src/application/state/: autofill.rs  clipboard.rs  command.rs  editing.rs  formatting.rs  io.rs  lifecycle.rs  matcher.rs  mod.rs  navigation.rs  search.rs  tests.rs  undo.rs  vim.rs
src/application/state/command/: analyze.rs  data.rs  mod.rs  tests.rs
src/domain/: errors.rs  mod.rs  models.rs  parser.rs  services.rs
src/domain/models/: cell.rs  dep_graph.rs  mod.rs  refs.rs  spreadsheet.rs  style.rs  workbook.rs
src/domain/models/spreadsheet/: mod.rs  tests.rs
src/domain/parser/: evaluator.rs  lexer.rs  mod.rs  parser_impl.rs  registry.rs
src/domain/parser/evaluator/: mod.rs  tests.rs
src/domain/parser/registry_fns/: date.rs  dynamic_array.rs  finance.rs  info.rs  logical.rs  lookup.rs  mod.rs  numeric.rs  string.rs  viz.rs  web.rs
src/domain/services/: autofill_pattern.rs  csv.rs  evaluator.rs  executor.rs  file_writer.rs  http.rs  mod.rs
src/domain/services/evaluator/: adjust.rs  circular.rs  cross_sheet.rs  mod.rs  refs.rs  tests.rs
src/infrastructure/: atomic.rs  autosave.rs  fetcher.rs  mod.rs  persistence.rs  recent.rs  sidecar.rs  xlsx.rs
src/infrastructure/xlsx/: tests.rs
src/presentation/: input.rs  mod.rs  ui.rs
src/presentation/input/: dialogs.rs  editing.rs  mod.rs  normal.rs  visual.rs
src/presentation/input/normal/: tests.rs
src/presentation/input/visual/: tests.rs
src/presentation/ui/: grid.rs  header.rs  help.rs  mod.rs  popups.rs  status_bar.rs
tests/: pty_advanced.rs  pty_edges.rs  pty_insert.rs  pty_polish.rs  pty_power.rs  pty_scenarios.rs  pty_smoke.rs  pty_spill.rs  pty_ux.rs  pty_workflows.rs
tests/common/: mod.rs
tests/common/scenarios/: amortization.rs  bond.rs  break_even.rs  budgeting.rs  commission.rs  compound.rs  currency.rs  dcf.rs  formatting.rs  inventory.rs  leaderboard.rs  lookup.rs  mod.rs  pipeline.rs  portfolio.rs  quarterly_forecast.rs  regression.rs  schedule.rs  sensitivity.rs  tax.rs
