[package]
name = "tshts"
version = "0.2.1"
edition = "2024"
description = "Terminal spreadsheet with Excel-equivalent formula language"
license = "MIT"

[[bin]]
name = "tshts"
path = "src/main.rs"

[lib]
name = "tshts"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
reqwest = { version = "0.11", features = ["blocking"] }
arboard = "3"
unicode-width = "0.2"
regex = "1"
calamine = "0.24"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.0"
# PTY end-to-end test harness. portable-pty spawns the real binary in a
# pseudo-tty; vt100 parses the escape sequences back into a virtual screen
# we can assert against. Used by tests/pty_*.rs.
portable-pty = "0.8"
vt100 = "0.15"
