[package]
name = "tshts"
version = "0.2.1"
edition = "2024"
description = "Terminal spreadsheet with Excel-equivalent formula language"
license = "MIT"

[[bin]]
name = "tshts"
path = "src/main.rs"

[lib]
name = "tshts"
path = "src/lib.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
reqwest = { version = "0.13", features = ["blocking"] }
arboard = "3"
unicode-width = "0.2"
regex = "1"
calamine = "0.35"
zip = { version = "2", default-features = false, features = ["deflate"] }
# SIGTERM / SIGHUP handler — flips an AtomicBool the main loop polls so we
# can flush the autosave worker before exit instead of letting logout/
# shutdown drop queued writes.
signal-hook = "0.4"
# Work-stealing parallel iterator. Used by `ParallelExecutor` to run
# per-level cell evaluation across multiple cores. We use `par_iter`
# with `with_min_len(K)` rather than per-cell tasks because the
# ~400ns dispatch overhead exceeds typical formula-eval cost — see
# research/dag-scheduling/granularity.md for the measured breakeven.
rayon = "1"

[dev-dependencies]
tempfile = "3.0"
# PTY end-to-end test harness. portable-pty spawns the real binary in a
# pseudo-tty; vt100 parses the escape sequences back into a virtual screen
# we can assert against. Used by tests/pty_*.rs.
portable-pty = "0.9"
vt100 = "0.16"

[[bench]]
name = "calc_engine"
path = "benches/calc_engine.rs"
harness = false
